add new functionalities and refactor the db and the server files
